project form back integration

--- a/app/assets/javascripts/templates/investigator_form.hbs
+++ b/app/assets/javascripts/templates/investigator_form.hbs
@@ -1,4 +1,4 @@
-<form class="c-grid" action="#">
+<form class="c-grid c-modal-investigator" action="#">
   <div class="row">
     <div class="column small-12">
       <h2 class="c-title">New Investigator</h2>
