--- a/app/assets/javascripts/templates/organization_form.hbs
+++ b/app/assets/javascripts/templates/organization_form.hbs
@@ -1,4 +1,4 @@
-<form class="c-grid" action="#">
+<form class="c-grid c-modal-organization" action="#">
 
   <div class="row">
     <div class="column small-12">
@@ -35,4 +35,5 @@
       </div>
     </div>
   </div>
+
 </form>
