Render layers list by api

--- a/app/assets/stylesheets/components/_layers.scss
+++ b/app/assets/stylesheets/components/_layers.scss
@@ -14,6 +14,7 @@
   box-shadow: $box-shadow;
   pointer-events: all;
   cursor: auto;
+  overflow-y: auto;
 
   .layers-item {
     text-transform: capitalize;
