--- a/app/assets/javascripts/templates/layers.hbs
+++ b/app/assets/javascripts/templates/layers.hbs
@@ -1,38 +1,38 @@
 {{#if active}}
   <div class="c-layers">
-    {{#each data.layers}}
-      <div class="layers-item">
+    {{#each layers as |layer key|}}
+      <div class="layers-item -collapsed">
         <div class="layer">
-          {{#unless group}}
+          {{#unless key}}
             <div class="switch round tiny">
-              <input class="switch-input" type="radio" id="{{id}}" name="layer" value="{{value}}">
-              <label class="switch-paddle" for="{{id}}"></label>
+              <input class="switch-input" type="radio" id="{{slug}}" name="layer" value="{{slug}}">
+              <label class="switch-paddle" for="{{slug}}"></label>
             </div>
           {{/unless}}
-          {{#if group}}
+          {{#if key}}
           <button class="c-btn -thin js-collapse-layer">
             <svg class="c-icon -small -primary layer-arrow">
               <use xlink:href="#icon-arrow"></use>
             </svg>
           </button>
           {{/if}}
-          {{value}}
+          {{key}}
           <button class="c-btn -round-icon -primary">
             <svg class="c-icon -small -inverse">
               <use xlink:href="#icon-info"></use>
             </svg>
           </button>
         </div>
-        {{#if group}}
+        {{#if key}}
           <ul class="layer-list">
-            {{#each group}}
+            {{#each layer}}
               <div class="layers-item">
                 <div class="layer">
                   <div class="switch round tiny">
-                    <input class="switch-input" type="radio" id="{{id}}" name="layer" value="{{value}}" data-date="{{date}}">
-                    <label class="switch-paddle" for="{{id}}"></label>
+                    <input class="switch-input" type="radio" id="{{slug}}" name="layer" value="{{slug}}" data-group="{{key}}">
+                    <label class="switch-paddle" for="{{slug}}"></label>
                   </div>
-                  {{date}}
+                  {{name}}
                   <button class="c-btn -round-icon -primary">
                     <svg class="c-icon -small -inverse">
                       <use xlink:href="#icon-info"></use>
