--- a/app/assets/stylesheets/components/_layers.scss
+++ b/app/assets/stylesheets/components/_layers.scss
@@ -52,6 +52,13 @@
         display: none;
       }
     }
+
+    .group-title {
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+      align-items: center;
+    }
   }
 
   .layers-item:first-child {
