--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -14,7 +14,8 @@
     </div>
   </div>
 
-  <div id="map" class="c-map">
+  <div class="l-app-map">
+    <div id="map" class="c-map"></div>
     <div id="layers"></div>
   </div>
 
