--- a/app/views/organizations/show.js.erb
+++ b/app/views/organizations/show.js.erb
@@ -1,8 +1,8 @@
 (function() {
 
   'use strict'
+  <% template = @current_type == 'people' ? "investigators/list" : "#{@current_type}/list" %>
 
-  <% template = @current_type == 'events' ? 'events/list' : 'projects/list'  %>
   var htmlContent = "<%= escape_javascript render(partial: template, locals: { items: @items, more: @more }) %>";
   var htmlCounters = "<%= escape_javascript render(partial: 'map/counters') %>"
 
