new form structure (adding membership)

--- a/app/assets/javascripts/templates/project_form.hbs
+++ b/app/assets/javascripts/templates/project_form.hbs
@@ -54,22 +54,19 @@
         </div>
       </div>
 
-      <h3 class="c-title">Investigators & organizations</h3>
+      <div id="investigators"></div>
       <div class="row">
-        <div class="column small-12 medium-6">
-          <h4 class="c-title">Investigators</h4>
-          <div id="investigators" class="c-select"></div>
-        </div>
-        <div class="column small-12 medium-6">
-          <h4 class="c-title">Organizations</h4>
-          <div id="organizations" class="c-select"></div>
+        <div class="column small-12">
+          <div class="c-button-container -j-center -a-center">
+            <button class="c-button -filled addnew">Add more</button>
+          </div>
         </div>
       </div>
 
       <div class="row">
         <div class="column small-12">
           <div class="c-button-container -j-center -a-center">
-            <button type="submit" class="c-button -filled js-filter-form-submit">Apply</button>
+            <button type="submit" class="c-button -filled js-filter-form-submit">Submit</button>
           </div>
         </div>
       </div>
