--- a/app/assets/javascripts/templates/organization_form.hbs
+++ b/app/assets/javascripts/templates/organization_form.hbs
@@ -7,14 +7,17 @@
   </div>
 
   <div class="row">
-    <div class="column small-12">
+    <div class="column small-12 medium-6">
       <div id="organizationname" class="c-select"></div>
+    </div>
+    <div class="column small-12 medium-6">
+      <div id="organizationtype" class="c-select"></div>
     </div>
   </div>
 
   <div class="row">
-    <div class="column small-12">
-      <div id="organizationwebsite" class="c-select"></div>
+    <div class="column small-12 medium-6">
+      <div id="organizationcountry" class="c-select"></div>
     </div>
   </div>
 
