Layers style fits

--- a/app/assets/stylesheets/_fonts.scss
+++ b/app/assets/stylesheets/_fonts.scss
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: "Montserrat";
+  font-family: "Montserrat-light";
   src: asset-url("montserrat-light-webfont.woff2") format("woff2"),
     asset-url("montserrat-light-webfont.woff") format("woff");
   font-weight: lighter;
