--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -3,7 +3,8 @@ $max-width: 1400px;
 
 /* Font */
 $base-font-family: "Montserrat", Arial, sans-serif;
-$base-font-size: 15px;
+$base-font-family-light: "Montserrat-light";
+$base-font-size: 14px;
 $base-font-weight: lighter;
 $base-line-height: 1.6;
 
