--- a/app/assets/javascripts/templates/layers.hbs
+++ b/app/assets/javascripts/templates/layers.hbs
@@ -17,12 +17,12 @@
                 </svg>
               </button>
               <div class="group-title">
-                {{key}}
-                <button class="c-btn -round-icon -primary">
+                <span class="js-collapse-layer">{{key}}</span>
+                {{!-- <button class="c-btn -round-icon -primary">
                   <svg class="c-icon -small -inverse">
                     <use xlink:href="#icon-info"></use>
                   </svg>
-                </button>
+                </button> --}}
               </div>
             </div>
             <ul class="layer-list">
@@ -34,11 +34,11 @@
                       <label class="switch-paddle" for="{{layer.slug}}"></label>
                     </div>
                     {{layer.name}}
-                    <button class="c-btn -round-icon -primary">
+                    {{!-- <button class="c-btn -round-icon -primary">
                       <svg class="c-icon -small -inverse">
                         <use xlink:href="#icon-info"></use>
                       </svg>
-                    </button>
+                    </button> --}}
                   </div>
                 </div>
               {{/each}}
@@ -55,11 +55,11 @@
                 <label class="switch-paddle" for="{{layer.slug}}"></label>
               </div>
               {{layer.name}}
-              <button class="c-btn -round-icon -primary">
+              {{!-- <button class="c-btn -round-icon -primary">
                 <svg class="c-icon -small -inverse">
                   <use xlink:href="#icon-info"></use>
                 </svg>
-              </button>
+              </button> --}}
             </div>
           </div>
         {{/each}}
