--- a/app/assets/stylesheets/components/_layers.scss
+++ b/app/assets/stylesheets/components/_layers.scss
@@ -1,7 +1,6 @@
 .c-layers {
-  font-family: $base-font-family;
+  font-family: $base-font-family-light;
   font-size: $base-font-size;
-  font-weight: $base-font-weight;
   width: 25%;
 
   position: absolute;
@@ -30,16 +29,23 @@
 
     .layer {
       display: flex;
-      align-items: center;
+      align-items: flex-start;
       justify-content: flex-start;
+      margin-bottom: 10px;
+      line-height: 21px;
 
       .layer-arrow {
         transform: rotate(90deg);
       }
+
+      .c-btn.-thin {
+        padding-top: 4px;
+        padding-bottom: 4px;
+      }
     }
 
     .switch {
-      padding: ($button-y-padding / 2) ($button-x-padding / 2);
+      padding: 5px ($button-x-padding / 2);
       margin: 0;
     }
 
@@ -65,6 +71,10 @@
       justify-content: space-between;
       width: 100%;
       align-items: center;
+
+      .js-collapse-layer {
+        cursor: pointer;
+      }
     }
   }
 
