Action button active style

--- a/app/assets/stylesheets/components/_actionbar.scss
+++ b/app/assets/stylesheets/components/_actionbar.scss
@@ -13,5 +13,10 @@
       vertical-align: -2px;
       margin-right: 5px;
     }
+
+    .-active {
+      background-color: rgba(90, 173, 228, 0.7);
+    }
   }
+
 }
