--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -3,7 +3,9 @@
 
 <section class="l-app -full">
 
-  <div id="map" class="c-map"></div>
+  <div class="l-app-map">
+    <div id="map" class="c-map"></div>
+  </div>
 
   <%= render "shared/legend" %>
 
