--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,7 +1,9 @@
 <% title @event.title %>
 
 <section class="l-app -full">
-  <div id="map" class="c-map"></div>
+  <div class="l-app-map">
+    <div id="map" class="c-map"></div>
+  </div>
   <%= render "shared/legend" %>
   <div class="l-app-title">
     <div class="wrapper">
