--- a/app/views/investigators/show.html.erb
+++ b/app/views/investigators/show.html.erb
@@ -2,8 +2,9 @@
 <% title "Map" %>
 
 <section class="l-app -full">
-
-  <div id="map" class="c-map"></div>
+  <div class="l-app-map">
+    <div id="map" class="c-map"></div>
+  </div>
   <%= render "shared/legend" %>
   <div class="l-app-title">
     <div class="wrapper">
