--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,8 +1,12 @@
 <% title @project.title %>
 
 <section class="l-app -full">
-  <div id="map" class="c-map"></div>
+  <div class="l-app-map">
+    <div id="map" class="c-map"></div>
+  </div>
+
   <%= render "shared/legend" %>
+
   <div class="l-app-title">
     <div class="wrapper">
       <div class="row collapse">
