--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -56,14 +56,6 @@
       z-index: 1000 !important;
     }
 
-    &.-blue {
-      background-color: rgba(#007bcd, 0.85);
-    }
-
-    &.-orange {
-      background-color: rgba(#f57823, 0.85);
-    }
-
     &.prunecluster {
       color: #007bcd;
       font-size: 21px;
@@ -91,16 +83,34 @@
     }
   }
 
+  &.-projects .bubble-icon {
+    background-color: rgba(#007bcd, 0.85);
+  }
+  &.-projects .prunecluster {
+    color: #007bcd;
+    border-color: #007bcd;
+  }
+
+  &.-events .prunecluster,
+  &.-events .bubble-icon {
+    background-color: rgba(#f57823, 0.85);
+  }
+
+  &.-people .prunecluster,
+  &.-people .bubble-icon {
+    background-color: rgba($secondary-color, 0.85);
+  }
+
   .circle-icon {
     border: 1px solid #9440d7;
     background: #b85fff;
     border-radius: 100%;
     box-shadow: 0 3px 5px 0 rgba(3, 11, 43, 0.2);
+  }
 
-    &.-events {
-      background-color: #f57823;
-      border: 1px solid #e66d1b;
-    }
+  &.-events .circle-icon {
+    background-color: #f57823;
+    border: 1px solid #e66d1b;
   }
 
   .marker-icon {
@@ -112,11 +122,11 @@
       stroke-width: 1px;
       filter: drop-shadow(0 3px 5px rgba(3, 11, 43, 0.2));
     }
+  }
 
-    &.-events .icon {
-      fill: #f57823;
-      stroke: #e66d1b;
-    }
+  &.-events .maker-icon .icon {
+    fill: #f57823;
+    stroke: #e66d1b;
   }
 
   .point-icon {
