Share: modal share created

--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -22,7 +22,7 @@
     position: absolute;
     display: flex;
     width: 80%;
-    max-width: $max-width;
+    max-width: $modal-max-width;
     max-height: 85%;
     top: 50%;
     left: 50%;
