--- a/app/assets/javascripts/templates/actionbar.hbs
+++ b/app/assets/javascripts/templates/actionbar.hbs
@@ -8,4 +8,14 @@
       Layers
     </button>
   </li>
+
+  <li class="actionbar-item">
+    <button class="c-btn -thin js-actionbar-action" data-action="save">
+      <svg class="c-icon -small -inverse">
+        <use xlink:href="#icon-save"></use>
+      </svg>
+      Share
+    </button>
+  </li>
+
 </ul>
