Share: new share icon. Prevent houndci-bot complaining about a console.log

--- a/app/assets/javascripts/templates/actionbar.hbs
+++ b/app/assets/javascripts/templates/actionbar.hbs
@@ -12,7 +12,7 @@
   <li class="actionbar-item">
     <button class="c-btn -thin js-actionbar-action" data-action="save">
       <svg class="c-icon -small -inverse">
-        <use xlink:href="#icon-save"></use>
+        <use xlink:href="#icon-share"></use>
       </svg>
       Share
     </button>
