--- a/app/assets/stylesheets/components/_actionbar.scss
+++ b/app/assets/stylesheets/components/_actionbar.scss
@@ -9,6 +9,8 @@
   height: 100%;
 
   .actionbar-item {
+    position: relative;
+
     .c-btn > .c-icon {
       vertical-align: -2px;
       margin-right: 5px;
