--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -16,7 +16,7 @@
 
   <div class="l-app-map">
     <div id="map" class="c-map"></div>
-    <div id="layers"></div>
+    <!-- <div id="layers"></div> -->
   </div>
 
   <div class="l-app-navbar">
