--- a/app/assets/javascripts/templates/project_form.hbs
+++ b/app/assets/javascripts/templates/project_form.hbs
@@ -54,11 +54,11 @@
         </div>
       </div>
 
-      <div id="investigators"></div>
+      <div id="investigatororganization"></div>
       <div class="row">
         <div class="column small-12">
           <div class="c-button-container -j-center -a-center">
-            <button class="c-button -filled addnew">Add more</button>
+            <a href="javascript:void(0);" class="c-button -filled addnew">Add more</a>
           </div>
         </div>
       </div>
