--- a/app/views/investigators/show.html.erb
+++ b/app/views/investigators/show.html.erb
@@ -2,8 +2,9 @@
 <% title "Map" %>
 
 <section class="l-app -full">
-
-  <div id="map" class="c-map"></div>
+  <div class="l-app-map">
+    <div id="map" class="c-map"></div>
+  </div>
   <%= render "shared/legend" %>
   <div class="l-app-title">
     <div class="wrapper">
@@ -14,15 +15,11 @@
             <thead>
               <tr>
                 <th><%= t 'projects' %></th>
-                <th><%= t 'people' %></th>
-                <th><%= t 'events' %></th>
               </tr>
             </thead>
             <tbody>
               <tr>
                 <td><%= @projects.size %></td>
-                <td><%= @people.size %></td>
-                <td><%= @events.size %></td>
               </tr>
             </tbody>
           </table>
