--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
     </section>
     <%= render "shared/footer" %>
     <%= Gon::Base.render_data %>
+    <%= javascript_include_tag 'https://d3js.org/d3.v3.min.js' %>
     <%= javascript_include_tag 'application' %>
   </body>
 </html>
