Legend: breadcrumb bug fixed

--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -104,8 +104,8 @@
   }
 
   .circle-icon {
-    border: 1px solid #9440d7;
-    background: #b85fff;
+    border: 1px solid $secondary-color;
+    background: $secondary-color;
     border-radius: 100%;
     box-shadow: 0 3px 5px 0 rgba(3, 11, 43, 0.2);
   }
