--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,4 +1,8 @@
 <% title @project.title %>
+<script type="text/javascript">
+  var START_DATE = '<%= @project.start_date || 0 %>';
+  var END_DATE = '<%= @project.end_date || 0 %>';
+</script>
 
 <section class="l-app -full">
   <div class="l-app-map">
@@ -30,6 +34,32 @@
       </div>
       <div class="column small-4">
         <aside class="l-sidebar">
+
+          <% if @project.start_date || @project.end_date %>
+            <div class="sidebar-item c-dates-timeline">
+              <div class="dates">
+                 <% if @project.start_date %>
+                  <div class="date">
+                    <h3><%= t 'start_date' %></h3>
+                    <span><%= @project.start_date %></span>
+                  </div>
+                <% end %>
+                <% if @project.end_date %>
+                  <div class="date">
+                    <h3><%= t 'end_date' %></h3>
+                    <span><%= @project.end_date %></span>
+                  </div>
+                <% end %>
+              </div>
+
+              <% if @project.start_date && @project.end_date %>
+                <div class="timeline">
+                  <div class="timeline-line"></div>
+                </div>
+              <% end %>
+            </div>
+          <% end %>
+
           <div class="sidebar-item">
             <h3><%= t 'cancer_types' %></h3>
             <ul class="c-list">
