--- a/app/assets/stylesheets/layouts/_sidebar.scss
+++ b/app/assets/stylesheets/layouts/_sidebar.scss
@@ -1,6 +1,8 @@
 .l-sidebar {
+  width: 100%;
   border-left: 1px solid $border-color-1;
   padding: $box-space;
+  padding-right: 0;
 
   .sidebar-item {
     margin-bottom: $box-space;
