Breadcrumbs: names instead of isos

--- a/app/assets/javascripts/templates/breadcrumbs.hbs
+++ b/app/assets/javascripts/templates/breadcrumbs.hbs
@@ -10,7 +10,7 @@
           {{#if value}}data-value="{{value}}"{{/if}}
         >
           {{!-- <span class="globe-icon"><svg><use xlink:href="#icon-globe"</svg></span> --}}
-          {{value}}
+          {{string}}
         </a>
         {{!-- <span class="rhombus"></span> --}}
       </li>
