--- a/app/assets/stylesheets/components/_summary_info.scss
+++ b/app/assets/stylesheets/components/_summary_info.scss
@@ -3,6 +3,9 @@
 
   h3 {
     margin-bottom: 0;
+    text-transform: none;
+    font-weight: bold;
+    font-size: $base-font-size;
   }
 
   span {
