Tab by default active in project detail page

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -59,6 +59,9 @@
 <div class="l-grid" id="content">
   <% if @current_type == 'info' %>
     <%= render 'projects/info' %>
+  <%else%>
+    <%= render 'projects/list' %>
+
   <% end %>
 </div>
 
