--- a/app/views/projects/show.js.erb
+++ b/app/views/projects/show.js.erb
@@ -2,7 +2,7 @@
 
   'use strict'
 
-  <% template = 'info' %>
+  <% template = @current_type %>
   var htmlContent = "<%= escape_javascript render(partial: template) %>";
 
   document.getElementById('content').innerHTML = htmlContent;
