Dates variable as global

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,3 +1,8 @@
+<script type="text/javascript">
+  var START_DATE = '<%= @project.start_date || 0 %>';
+  var END_DATE = '<%= @project.end_date || 0 %>';
+</script>
+
 <section class="l-app -full">
   <div class="l-app-map">
     <div id="map" class="c-map"></div>
