--- a/app/assets/javascripts/templates/toolbar.hbs
+++ b/app/assets/javascripts/templates/toolbar.hbs
@@ -7,6 +7,7 @@
         <use xlink:href="#icon-filter"></use>
       </svg>
       Filter
+      <span class="notification-bubble js-notification-bubble"></span>
     </button>
   </li>
 </ul>
