List items hover styles

--- a/app/assets/stylesheets/layouts/_sidebar.scss
+++ b/app/assets/stylesheets/layouts/_sidebar.scss
@@ -5,4 +5,10 @@
   .sidebar-item {
     margin-bottom: $box-space;
   }
+
+  .list-item {
+    & a:hover {
+      color: $primary-color;
+    }
+  }
 }
