--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,5 @@
-<section class="l-app -full">
+<section class="l-app -main -full">
+  <div class="l-app-map">
+    <div id="map" class="c-map"></div>
+  </div>
 </section>
